fix: revert jdk version to fix LOG4J2-673